--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="日文N4測驗">
+    <meta name="mobile-web-app-capable" content="yes">
 
     <!-- Icons -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📚</text></svg>">
@@ -752,6 +753,46 @@
         }
 
         // ========== 事件監聽器初始化 ==========
+function startQuiz() {
+    // startQuiz 函數內容
+}
+
+function showHistory() {
+    // showHistory 函數內容
+}
+
+function exitApp() {
+    // exitApp 函數內容
+}
+
+function backToHome() {
+    // backToHome 函數內容
+}
+
+function prevQuestion() {
+    // prevQuestion 函數內容
+}
+
+function nextQuestion() {
+    // nextQuestion 函數內容
+}
+
+function submitQuiz() {
+    // submitQuiz 函數內容
+}
+
+function restartQuiz() {
+    // restartQuiz 函數內容
+}
+
+function setQuestionCount(count) {
+    // setQuestionCount 函數內容
+}
+
+// 然後才是 initEventListeners 函數
+function initEventListeners() {
+    // 事件監聽器內容
+
 
         // 初始化事件監聽
         function initEventListeners() {
