--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
                 vocabulary: 0,
                 synonym: 0,
                 grammar: 0,
-                reorder: 0  // 新增 reorder 類型
+                reorder: 0  
             };
             
             wrongQuestions.forEach(questionId => {
@@ -1041,7 +1041,7 @@
                         <li>詞語填空錯誤: ${errorTypes.vocabulary}</li>
                         <li>近義詞替換錯誤: ${errorTypes.synonym}</li>
                         <li>文法選擇錯誤: ${errorTypes.grammar}</li>
-                        <li>句子重組錯誤: ${errorTypes.reorder}</li> // 新增這一行
+                        <li>句子重組錯誤: ${errorTypes.reorder}</li>
                     </ul>
                 </div>
             `;
