--- a/index.html
+++ b/index.html
@@ -516,9 +516,9 @@
     
     <!-- 第一行：主要類型按鈕 -->
     <div class="main-type-buttons">
-        <button id="count-past-btn" class="count-btn">歷屆考題 (249題)</button>
-        <button id="count-vocab-btn" class="count-btn">單字測驗 (300題)</button>
-        <button id="count-simulate-btn" class="count-btn active">模擬N4考題 (410題)</button>
+        <button id="count-past-btn" class="count-btn">歷屆考題</button>
+        <button id="count-vocab-btn" class="count-btn">單字測驗</button>
+        <button id="count-simulate-btn" class="count-btn active">模擬N4考題</button>
     </div>
     
     <!-- 第二行：子類型選擇器（放在模擬考題下方） -->
